Fix search input for compare on Firefox. Change Add button color on select. Closes #28

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -64,3 +64,8 @@ table.sites td span.nodata {
 .social .twitter{
     padding-top: 1px;
 }
+
+#search{
+    padding: 10px 20px !important;
+    height: 42px;
+}
